--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "carter-cote",
+  "name": "tim-cvetko",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,9 +8,6 @@
     "start": "next start"
   },
   "dependencies": {
-    "@mdx-js/loader": "^3.1.0",
-    "@mdx-js/react": "^3.1.0",
-    "@next/mdx": "^15.1.3",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
     "@react-three/fiber": "^8.17.10",
@@ -24,7 +21,6 @@
     "lucide-react": "^0.341.0",
     "next": "14.1.0",
     "next-mdx-remote": "^5.0.0",
-    "next-themes": "^0.4.4",
     "posthog-js": "^1.136.0",
     "prop-types": "^15.7.2",
     "raw-loader": "^4.0.2",
@@ -35,8 +31,7 @@
     "remove-markdown": "^0.3.0",
     "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7",
-    "three": "^0.169.0",
-    "unist-util-visit": "^5.0.0"
+    "three": "^0.169.0"
   },
   "devDependencies": {
     "@types/node": "^20",
