--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lucide-react": "^0.341.0",
     "next": "14.1.0",
     "next-mdx-remote": "^5.0.0",
+    "next-themes": "^0.4.4",
     "posthog-js": "^1.136.0",
     "prop-types": "^15.7.2",
     "raw-loader": "^4.0.2",
